--- a/sass/toc.scss
+++ b/sass/toc.scss
@@ -4,7 +4,7 @@
     z-index: 114;
     background-color: var(--background);
     transform: translateX(0);
-    right: calc((100% - 950px - 250px) / 2);
+    right: calc((100% - 1200px) / 2);
     position: fixed;
     top: 23%;
 }
